# flow_example_2

./: README.md  poem.txt  pyproject.toml
src/flow_example_2/: main.py
src/flow_example_2/crews/intergration_crew/: intergration_crew.py
src/flow_example_2/crews/intergration_crew/config/: agents.yaml  tasks.yaml
src/flow_example_2/crews/poem_crew/: poem_crew.py
