[project]
name = "flow_example_2"
version = "0.1.0"
description = "flow_example_2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=1.15.1",
]

[project.scripts]
kickoff = "flow_example_2.main:kickoff"
run_crew = "flow_example_2.main:kickoff"
plot = "flow_example_2.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
